www/index.css
div.input_group{
  height: 700px;
  width:100%;
  position: relative;
  top: 50px;
}
div.output_group{
  width:100%;
  position: relative;
  top: 50px;
}
textarea.output {
  height:500px;
  width:80%;
  padding: 6px 6px 6px 6px;
}
input[type=submit] {
    padding:5px 15px;
    background:#ccc;
    border:0 none;
    cursor:pointer;
    -webkit-border-radius: 5px;
    border-radius: 5px;
}


#line{
  position:absolute;
  height: 495px;
  z-index: 0;
  padding:0;
  margin:5px 0 0 5px;
  border:0;
  background:#ecf0f5;
  width:23px;
  text-align:left;
  resize: none;
  opacity: 0.5;
}
#row_numbers{
  font-size: 13px;
  height:500px;
  overflow:hidden;
  width:20px;
  border:none;
  line-height:20px;
  text-align:center;
  resize: none;
}


textarea.input{
  width: 90%;
  height:500px;
  font-size: 13px;
  line-height:20px;
  padding: 6px 6px 6px 30px;
}
form#submit_input{
  float:left;
  width: 50%;
}

div#editor_test{
  max-width: 500px;
  height: 500px;
  background-color: powderblue;
}

.blue{
  color:blue;
}

#table_container > .tab_body {
    display: none;
}

#table_container > .tab_body.current {
    display: initial;
}

#tab_container > .tab_button {
    display: inline-block;
    user-select: none;
    border: 1px solid black;
    padding: 10px;
}

#tab_container > .tab_button.current {
    font-weight: bold;
}

